Touch LC - 22nd Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -809,6 +809,7 @@
      "iopub.status.idle": "2024-08-21T16:30:47.092758Z",
      "shell.execute_reply": "2024-08-21T16:30:47.092230Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009979,
      "end_time": "2024-08-21T16:30:47.093839",
@@ -840,6 +841,25 @@
     "# Testing the solution\n",
     "assert bertown_subway(5, [1,5,4,3,2]) == 17\n",
     "assert bertown_subway(3, [2,1,3]) == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a6e2bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findComplement(num: int) -> int:\n",
+    "    result, power = 0, 1\n",
+    "    while num:\n",
+    "        result += power if not num & 1 else 0\n",
+    "        num, power = num >> 1, power << 1\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findComplement(5) == 2\n",
+    "assert findComplement(1) == 0"
    ]
   }
  ],
