CP Practice - 24th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -854,6 +854,7 @@
      "iopub.status.idle": "2024-08-22T16:54:26.539230Z",
      "shell.execute_reply": "2024-08-22T16:54:26.538763Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008524,
      "end_time": "2024-08-22T16:54:26.540473",
@@ -875,6 +876,48 @@
     "# Testing the solution\n",
     "assert findComplement(5) == 2\n",
     "assert findComplement(1) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1309ea",
+   "metadata": {},
+   "source": [
+    "CP Practice: 24th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4772d01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def k_complete_word(N: int, K: int, word: str) -> int:\n",
+    "    updates = 0\n",
+    "    visited: set[int] = set()\n",
+    "    for i in range(N):\n",
+    "        if i not in visited:\n",
+    "            chars: list[int] = [0] * 26\n",
+    "            max_, count = 0, 0\n",
+    "            for j in range(i, N, K):\n",
+    "                if j not in visited:\n",
+    "                    visited.add(j)\n",
+    "                    chars[ord(word[j]) - ord('a')] += 1\n",
+    "                    max_, count = max(max_, chars[ord(word[j]) - ord('a')]), count + 1\n",
+    "                if N - j - 1 not in visited:\n",
+    "                    visited.add(N - j - 1)\n",
+    "                    chars[ord(word[N - j - 1]) - ord('a')] += 1\n",
+    "                    max_, count = max(max_, chars[ord(word[N - j - 1]) - ord('a')]), count + 1\n",
+    "            updates += (count - max_)\n",
+    "\n",
+    "    return updates\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert k_complete_word(36, 9, \"hippopotomonstrosesquippedaliophobia\") == 23\n",
+    "assert k_complete_word(21, 7, \"wudixiaoxingxingheclp\") == 16\n",
+    "assert k_complete_word(6, 2, \"abaaba\") == 2\n",
+    "assert k_complete_word(6, 3, \"abaaba\") == 0"
    ]
   }
  ],
