CP Practice - 25th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -906,6 +906,7 @@
      "iopub.status.idle": "2024-08-24T15:42:16.622313Z",
      "shell.execute_reply": "2024-08-24T15:42:16.621855Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010024,
      "end_time": "2024-08-24T15:42:16.623410",
@@ -942,6 +943,245 @@
     "assert k_complete_word(21, 7, \"wudixiaoxingxingheclp\") == 16\n",
     "assert k_complete_word(6, 2, \"abaaba\") == 2\n",
     "assert k_complete_word(6, 3, \"abaaba\") == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0fb8bbe",
+   "metadata": {},
+   "source": [
+    "CP Practice: 25th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1e474d2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def powerful_array(N: int, T: int, nums: list[int], queries: list[tuple[int, int]]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    This requires implementation of Moo's algorithm.\n",
+    "    Divide the nums into blocks of size sqrt(N) each, we answer the queries in a special order.\n",
+    "    \"\"\"\n",
+    "    class StepWiseResult:\n",
+    "        def __init__(self) -> None:\n",
+    "            # Data structure to maintain the `current` result\n",
+    "            self.freq: collections.defaultdict[int, int] = collections.defaultdict(int)\n",
+    "            self.result = 0\n",
+    "            self.curr_l = 0\n",
+    "            self.curr_r = -1\n",
+    "\n",
+    "        def add(self, idx) -> None:\n",
+    "            count = self.freq[nums[idx]]\n",
+    "            self.result += ((count + 1) * (count + 1) * nums[idx]) - (count * count * nums[idx])\n",
+    "            self.freq[nums[idx]] += 1\n",
+    "\n",
+    "        def remove(self, idx) -> None:\n",
+    "            count = self.freq[nums[idx]]\n",
+    "            self.result += ((count - 1) * (count - 1) * nums[idx]) - (count * count * nums[idx])\n",
+    "            self.freq[nums[idx]] -= 1\n",
+    "\n",
+    "    # Block size of Sqrt(N)\n",
+    "    BLOCK_SIZE = int(math.sqrt(N))\n",
+    "\n",
+    "    # Sort the left index by block number and right index in asc order if block num is odd else in desc order\n",
+    "    sorted_queries = sorted(enumerate(queries), key=lambda x: (x[1][0] // BLOCK_SIZE, x[1][1] if (x[1][0] // BLOCK_SIZE) % 2 == 0 else -x[1][1]))\n",
+    "\n",
+    "    # Answer queries in a particular order\n",
+    "    results: list[int] = [-1] * T\n",
+    "    swr = StepWiseResult()\n",
+    "    curr_l, curr_r = 0, -1\n",
+    "    for idx, (L, R) in sorted_queries:\n",
+    "        L, R = L - 1, R - 1\n",
+    "        while curr_l > L:\n",
+    "            curr_l -= 1\n",
+    "            swr.add(curr_l)\n",
+    "        while curr_r < R:\n",
+    "            curr_r += 1\n",
+    "            swr.add(curr_r)\n",
+    "        while curr_l < L:\n",
+    "            swr.remove(curr_l)\n",
+    "            curr_l += 1\n",
+    "        while curr_r > R:\n",
+    "            swr.remove(curr_r)\n",
+    "            curr_r -= 1\n",
+    "\n",
+    "        results[idx] = swr.result\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert powerful_array(8, 3, [1,1,2,2,1,3,1,1], [(2,7), (1,6), (2,7)]) == [20, 20, 20]\n",
+    "assert powerful_array(3, 2, [1,2,1], [(1,2), (1,3)]) == [3, 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51dec1b2",
+   "metadata": {},
+   "source": [
+    "LC Weekly Contest - 25th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41add9da",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def getFinalState(nums: list[int], K: int, multiplier: int) -> list[int]:\n",
+    "    heap: list[tuple[int, int]] = list(map(lambda x: (x[1], x[0]), enumerate(nums)))\n",
+    "    heapq.heapify(heap)\n",
+    "    for i in range(K):\n",
+    "        curr, idx = heapq.heappop(heap)\n",
+    "        heapq.heappush(heap, (curr * multiplier, idx))\n",
+    "\n",
+    "    result: list[int] = [-1] * len(heap)\n",
+    "    for curr, idx in heap:\n",
+    "        result[idx] = curr % (10 ** 9 + 7)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getFinalState([2,1,3,5,6], 5, 2) == [8,4,6,5,6]\n",
+    "assert getFinalState([1,2], 3, 4) == [16, 8]\n",
+    "assert getFinalState([1,2], 3, 4) == [16, 8]\n",
+    "assert getFinalState([100000,2000], 2, 1000000) == [999999307,999999993]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "077f8cdd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countPairs(nums: list[int]) -> int:\n",
+    "    def check_almost_equal(n1: int, n2: int) -> bool:\n",
+    "        n1_str, n2_str = str(n1), str(n2)\n",
+    "        max_width = max(len(n1_str), len(n2_str))\n",
+    "        n1_str, n2_str = n1_str.zfill(max_width), n2_str.zfill(max_width)\n",
+    "        f1, f2 = collections.Counter(n1_str), collections.Counter(n2_str)\n",
+    "        non_match_pos = 0\n",
+    "        for ch1, ch2 in zip(n1_str, n2_str):\n",
+    "            if ch1 != ch2:\n",
+    "                non_match_pos += 1\n",
+    "\n",
+    "        return f1 == f2 and non_match_pos <= 2\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    count = 0\n",
+    "    for i in range(N):\n",
+    "        for j in range(i + 1, N):\n",
+    "            count += int(check_almost_equal(nums[i], nums[j]))\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPairs([3,12,30,17,21]) == 2\n",
+    "assert countPairs([1,1,1,1,1]) == 10\n",
+    "assert countPairs([123,231]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9297a99",
+   "metadata": {},
+   "source": [
+    "Codeforces Div - 2: 25th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f59aa1d6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def turtle_and_good_strings(N: int, S: str) -> bool:\n",
+    "    return S[0] != S[-1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert turtle_and_good_strings(2, \"aa\") == False\n",
+    "assert turtle_and_good_strings(3, \"aba\") == False\n",
+    "assert turtle_and_good_strings(4, \"abcb\") == True\n",
+    "assert turtle_and_good_strings(12, \"abcabcabcabc\") == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a4465e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def turtle_and_piggy_are_playing_a_game(N: int, nums: list[int]) -> int:\n",
+    "    nums.sort()\n",
+    "    return nums[N // 2]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert turtle_and_piggy_are_playing_a_game(2, [1,2]) == 2\n",
+    "assert turtle_and_piggy_are_playing_a_game(3, [1,1,2]) == 1\n",
+    "assert turtle_and_piggy_are_playing_a_game(3, [1,2,3]) == 2\n",
+    "assert turtle_and_piggy_are_playing_a_game(5, [3,1,2,2,3]) == 2\n",
+    "assert turtle_and_piggy_are_playing_a_game(10, [10,2,5,2,7,9,2,5,10,7]) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "064af796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def turtle_and_good_pairs(N: int, S: str) -> str:\n",
+    "    freq: list[int] = [0] * 26\n",
+    "    for ch in S:\n",
+    "        freq[ord(ch) - ord('a')] += 1\n",
+    "\n",
+    "    result: list[str] = []\n",
+    "    i = 0\n",
+    "    while N:\n",
+    "        if freq[i] > 0:\n",
+    "            result.append(chr(i + ord('a')))\n",
+    "            N -= 1\n",
+    "            freq[i] -= 1\n",
+    "        i = (i + 1) % 26\n",
+    "\n",
+    "    return \"\".join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "def test_turtle_and_good_pairs(S: str, ans: str) -> None:\n",
+    "    def count(s: str) -> int:\n",
+    "        N = len(s)\n",
+    "        count = 0\n",
+    "        for i in range(N):\n",
+    "            chars: set[str] = {s[i]}\n",
+    "            for j in range(i + 1, N):\n",
+    "                chars.add(s[j])\n",
+    "                if s[i] == s[j] or len(chars) > 2:\n",
+    "                    count += 1\n",
+    "        return count\n",
+    "\n",
+    "    assert count(S) == count(ans)\n",
+    "\n",
+    "test_turtle_and_good_pairs(turtle_and_good_pairs(3, \"abc\"), \"acb\")\n",
+    "test_turtle_and_good_pairs(turtle_and_good_pairs(5, \"edddf\"), \"ddedf\")\n",
+    "test_turtle_and_good_pairs(turtle_and_good_pairs(10, \"codeforces\"), \"codeforces\")\n",
+    "test_turtle_and_good_pairs(turtle_and_good_pairs(6, \"turtle\"), \"urtlet\")"
    ]
   }
  ],
