Touch LC: 26th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -222,6 +222,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c642f2d",
+   "metadata": {},
+   "source": [
+    "#### Helper for N Ary Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa2b46f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class NAryNode:\n",
+    "    def __init__(self, val: int) -> None:\n",
+    "        self.val = val\n",
+    "        self.children: list['NAryNode'] = []\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def from_list(nums: list[int|None]) -> 'NAryNode|None':\n",
+    "        nodes: list[NAryNode] = []\n",
+    "        idx = -1\n",
+    "        for val in nums:\n",
+    "            if val is None:\n",
+    "                idx += 1\n",
+    "            else:\n",
+    "                curr = NAryNode(val)\n",
+    "                if nodes:\n",
+    "                    assert idx != -1, \"Invalid input provided\"\n",
+    "                    nodes[idx].children.append(curr)\n",
+    "                nodes.append(curr)\n",
+    "\n",
+    "        return nodes[0] if nodes else None\n",
+    "\n",
+    "    def to_list(self) -> list[int|None]:\n",
+    "        result: list[int|None] = [self.val, None]\n",
+    "        queue: collections.deque['NAryNode'] = collections.deque([self])\n",
+    "        while queue:\n",
+    "            curr = queue.popleft()\n",
+    "            for child in curr.children:\n",
+    "                queue.append(child)\n",
+    "                result.append(child.val)\n",
+    "            result.append(None)\n",
+    "\n",
+    "        # Strip out all `None` from the end\n",
+    "        while result and result[-1] is None:\n",
+    "            result.pop()\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the function\n",
+    "temp = NAryNode.from_list([1,None,3,2,4,None,5,6])\n",
+    "assert temp and temp.to_list() == [1,None,3,2,4,None,5,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e514eda2",
    "metadata": {
     "papermill": {
@@ -1248,6 +1307,7 @@
      "iopub.status.idle": "2024-08-25T16:38:19.644455Z",
      "shell.execute_reply": "2024-08-25T16:38:19.644013Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011962,
      "end_time": "2024-08-25T16:38:19.645557",
@@ -1294,6 +1354,61 @@
     "test_turtle_and_good_pairs(turtle_and_good_pairs(5, \"edddf\"), \"ddedf\")\n",
     "test_turtle_and_good_pairs(turtle_and_good_pairs(10, \"codeforces\"), \"codeforces\")\n",
     "test_turtle_and_good_pairs(turtle_and_good_pairs(6, \"turtle\"), \"urtlet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26885d10",
+   "metadata": {},
+   "source": [
+    "DSA Touch: 26th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4b0e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def postorder_N_ary_opt1(root: 'NAryNode|None') -> list[int]:\n",
+    "    result: list[int] = []\n",
+    "    stack: list[tuple['NAryNode|None', int]] = [(root, 0)]\n",
+    "    while stack:\n",
+    "        curr, idx = stack[-1]\n",
+    "        if not curr or idx == len(curr.children):\n",
+    "            if curr:\n",
+    "                result.append(curr.val)\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            stack[-1] = curr, idx + 1\n",
+    "            stack.append((curr.children[idx], 0))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert postorder_N_ary_opt1(NAryNode.from_list([1,None,3,2,4,None,5,6])) == [5,6,3,2,4,1]\n",
+    "assert postorder_N_ary_opt1(NAryNode.from_list([1,None,2,3,4,5,None,None,6,7,None,8,None,9,10,None,None,11,None,12,None,13,None,None,14])) == [2,6,14,11,7,3,12,8,4,13,9,10,5,1]\n",
+    "\n",
+    "def postorder_N_ary_opt2(root: 'NAryNode|None') -> list[int]:\n",
+    "    result: list[int] = []\n",
+    "    stack: list[tuple['NAryNode|None', bool]] = [(root, False)]\n",
+    "    while stack:\n",
+    "        curr, completed = stack.pop()\n",
+    "        if not curr:\n",
+    "            continue\n",
+    "        elif completed:\n",
+    "            result.append(curr.val)\n",
+    "        else:\n",
+    "            stack.append((curr, True))\n",
+    "            for children in curr.children[::-1]:\n",
+    "                stack.append((children, False))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert postorder_N_ary_opt2(NAryNode.from_list([1,None,3,2,4,None,5,6])) == [5,6,3,2,4,1]\n",
+    "assert postorder_N_ary_opt2(NAryNode.from_list([1,None,2,3,4,5,None,None,6,7,None,8,None,9,10,None,None,11,None,12,None,13,None,None,14])) == [2,6,14,11,7,3,12,8,4,13,9,10,5,1]"
    ]
   }
  ],
