--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -1407,6 +1407,7 @@
      "iopub.status.idle": "2024-08-26T16:17:22.981290Z",
      "shell.execute_reply": "2024-08-26T16:17:22.980749Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013564,
      "end_time": "2024-08-26T16:17:22.982530",
@@ -1456,6 +1457,87 @@
     "# Testing the solution\n",
     "assert postorder_N_ary_opt2(NAryNode.from_list([1,None,3,2,4,None,5,6])) == [5,6,3,2,4,1]\n",
     "assert postorder_N_ary_opt2(NAryNode.from_list([1,None,2,3,4,5,None,None,6,7,None,8,None,9,10,None,None,11,None,12,None,13,None,None,14])) == [2,6,14,11,7,3,12,8,4,13,9,10,5,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ef017d7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def construct2DArray(original: list[int], M: int, N: int) -> list[list[int]]:\n",
+    "    if len(original) != M * N:\n",
+    "        return []\n",
+    "    else:\n",
+    "        results: list[list[int]] = [[]]\n",
+    "        for i in range(len(original)):\n",
+    "            results[-1].append(original[i])\n",
+    "            if (i + 1) % N == 0:\n",
+    "                results.append([])\n",
+    "\n",
+    "    results.pop()\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert construct2DArray([1,2,3,4], 2, 2) == [[1,2], [3,4]]\n",
+    "assert construct2DArray([1,2,3], 1, 3) == [[1,2,3]]\n",
+    "assert construct2DArray([1,2], 1, 1) == []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a6adcb",
+   "metadata": {},
+   "source": [
+    "LC Weekly: 1st Sept 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9420213c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def checkTwoChessboards(coord1: str, coord2: str) -> bool:\n",
+    "    c1, c2 = (ord(coord1[0]) - ord('a'), int(coord1[1]) - 1), (ord(coord2[0]) - ord('a'), int(coord2[1]) - 1)\n",
+    "    checkColor = lambda x: x[0] % 2 == x[1] % 2\n",
+    "    return checkColor(c1) == checkColor(c2)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert checkTwoChessboards(\"a1\", \"c3\") == True\n",
+    "assert checkTwoChessboards(\"a1\", \"h3\") == False\n",
+    "assert checkTwoChessboards(\"b4\", \"h6\") == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "351d09d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resultsArray(queries: list[list[int]], K: int) -> list[int]:\n",
+    "    def distance(pt: list[int]) -> int:\n",
+    "        return abs(pt[0]) + abs(pt[1])\n",
+    "\n",
+    "    results: list[int] = []\n",
+    "    heap: list[int] = []\n",
+    "    for pt in queries:\n",
+    "        heapq.heappush(heap, -distance(pt))\n",
+    "        if len(heap) > K:\n",
+    "            heapq.heappop(heap)\n",
+    "        results.append(-heap[0] if len(heap) == K else -1)\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert resultsArray([[1,2],[3,4],[2,3],[-3,0]], 2) == [-1, 7, 5, 3]\n",
+    "assert resultsArray([[5,5],[4,4],[3,3]], 1) == [10, 8, 6]"
    ]
   }
  ],
