--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -1563,6 +1563,7 @@
      "iopub.status.idle": "2024-09-01T09:00:23.976753Z",
      "shell.execute_reply": "2024-09-01T09:00:23.976282Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011476,
      "end_time": "2024-09-01T09:00:23.977883",
@@ -1590,6 +1591,70 @@
     "# Testing the solution\n",
     "assert resultsArray([[1,2],[3,4],[2,3],[-3,0]], 2) == [-1, 7, 5, 3]\n",
     "assert resultsArray([[5,5],[4,4],[3,3]], 1) == [10, 8, 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbf71141",
+   "metadata": {},
+   "source": [
+    "CF Div 4: 3rd Sept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4adc39dc",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimize(a: int, b: int) -> int:\n",
+    "    return b - a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd9d317f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def legend_of_freya(x: int, y: int, k: int) -> int:\n",
+    "    x_moves, y_moves = math.ceil(x / k), math.ceil(y / k)\n",
+    "    moves = max(x_moves, y_moves) * 2\n",
+    "    return moves if y_moves >= x_moves else moves - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert legend_of_freya(9, 11, 3) == 8\n",
+    "assert legend_of_freya(0, 10, 8) == 4\n",
+    "assert legend_of_freya(1000000, 100000, 10) == 199999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e53cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getLucky(s: str, k: int) -> int:\n",
+    "    ords: list[int] = list(map(lambda x: ord(x) - ord('a') + 1, s))\n",
+    "    curr = functools.reduce(lambda x, y: x * 100 + y if y >= 10 else x * 10 + y, ords, 0)\n",
+    "    while k:\n",
+    "        total = 0\n",
+    "        while curr:\n",
+    "            total, curr = total + (curr % 10), curr // 10\n",
+    "        curr, k = total, k - 1\n",
+    "    return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getLucky(\"leetcode\", 2) == 6\n",
+    "assert getLucky(\"zbax\", 2) == 8\n",
+    "assert getLucky(\"iiii\", 1) == 36"
    ]
   }
  ],
