--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -1682,6 +1682,7 @@
      "iopub.status.idle": "2024-09-03T17:02:58.752131Z",
      "shell.execute_reply": "2024-09-03T17:02:58.751709Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011447,
      "end_time": "2024-09-03T17:02:58.753267",
@@ -1707,6 +1708,35 @@
     "assert getLucky(\"leetcode\", 2) == 6\n",
     "assert getLucky(\"zbax\", 2) == 8\n",
     "assert getLucky(\"iiii\", 1) == 36"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c6dc740",
+   "metadata": {},
+   "source": [
+    "LC Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951ee31e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def firstBadVersion(N: int) -> int:\n",
+    "    def isBadVersion(version: int) -> bool:\n",
+    "        return True\n",
+    "\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if isBadVersion(mid):\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return low"
    ]
   }
  ],
