LC Practice - 7th Sept 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -1738,6 +1738,7 @@
      "iopub.status.idle": "2024-09-04T15:55:06.933712Z",
      "shell.execute_reply": "2024-09-04T15:55:06.933179Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010966,
      "end_time": "2024-09-04T15:55:06.934798",
@@ -1761,6 +1762,40 @@
     "        else:\n",
     "            low = mid + 1\n",
     "    return low"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6557c37",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "LC Practice - 6th Sept 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94b2729e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minOperations(logs: list[str]) -> int:\n",
+    "    depth = 0\n",
+    "    for op in logs:\n",
+    "        if op == \"../\":\n",
+    "            depth = max(0, depth - 1)\n",
+    "        elif op == \"./\":\n",
+    "            pass\n",
+    "        else:\n",
+    "            depth += 1\n",
+    "    return depth\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minOperations([\"d1/\",\"d2/\",\"../\",\"d21/\",\"./\"]) == 2\n",
+    "assert minOperations([\"d1/\",\"d2/\",\"./\",\"d3/\",\"../\",\"d31/\"]) == 3\n",
+    "assert minOperations([\"d1/\",\"../\",\"../\",\"../\"]) == 0"
    ]
   }
  ],
