LC Practice - 11th Sept 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -1793,6 +1793,7 @@
      "iopub.status.idle": "2024-09-07T09:24:06.387830Z",
      "shell.execute_reply": "2024-09-07T09:24:06.387292Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011582,
      "end_time": "2024-09-07T09:24:06.389052",
@@ -1819,6 +1820,91 @@
     "assert minOperations([\"d1/\",\"d2/\",\"../\",\"d21/\",\"./\"]) == 2\n",
     "assert minOperations([\"d1/\",\"d2/\",\"./\",\"d3/\",\"../\",\"d31/\"]) == 3\n",
     "assert minOperations([\"d1/\",\"../\",\"../\",\"../\"]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25edcd6e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def SOE(N: int) -> list[int]:\n",
+    "    soe: list[bool] = [True for i in range(N + 1)]\n",
+    "    soe[0] = soe[1] = False\n",
+    "    i = 2\n",
+    "    while i * i <= N:\n",
+    "        if soe[i]:\n",
+    "            soe[i*i::i] = [False] * len(soe[i*i::i])\n",
+    "        i += 1\n",
+    "    return [i for i in range(N + 1) if soe[i]]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert len(SOE(20)) == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1922c4e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def GCD(n1: int, n2: int) -> int:\n",
+    "    while n1 > 0 and n2 > 0:\n",
+    "        n1, n2 = max(n1, n2), min(n1, n2)\n",
+    "        n1, n2 = n2, n1 % n2\n",
+    "    return max(n1, n2)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert GCD(4, 6) == 2\n",
+    "assert GCD(9, 8) == 1\n",
+    "assert GCD(6, 12) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9d2456",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def LCM(n1: int, n2: int) -> int:\n",
+    "    return (n1 * n2) // GCD(n1, n2)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert LCM(4, 6) == 12\n",
+    "assert LCM(3, 5) == 15\n",
+    "assert LCM(4, 12) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bde34bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divisors(N: int) -> list[int]:\n",
+    "    divs: list[int] = []\n",
+    "    i = 1\n",
+    "    while i * i <= N:\n",
+    "        if N % i == 0:\n",
+    "            divs.append(i)\n",
+    "            if N // i != i:\n",
+    "                divs.append(N // i)\n",
+    "        i += 1\n",
+    "\n",
+    "    return sorted(divs)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert divisors(18) == [1,2,3,6,9,18]"
    ]
   }
  ],
