LC Practice - 13th Sept 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -2228,6 +2228,7 @@
      "iopub.status.idle": "2024-09-12T16:38:55.095637Z",
      "shell.execute_reply": "2024-09-12T16:38:55.095103Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013363,
      "end_time": "2024-09-12T16:38:55.096810",
@@ -2249,7 +2250,7 @@
     "        for i in range(N):\n",
     "            if s1[i] not in mapping and s2[i] not in rev_mapping:\n",
     "                mapping[s1[i]], rev_mapping[s2[i]] = s2[i], s1[i]\n",
-    "            elif mapping.get(s1[i], \"* MISSING *\") != s2[i]:\n",
+    "            elif mapping.get(s1[i], \"* MISSING *\") != s2[i] or rev_mapping.get(s2[i], \"* MISSING *\") != s1[i]:\n",
     "                return False\n",
     "        return True\n",
     "\n",
@@ -2257,6 +2258,34 @@
     "assert isomorphicString(\"egg\", \"add\") == True\n",
     "assert isomorphicString(\"apple\", \"bbnbm\") == False\n",
     "assert isomorphicString(\"paper\", \"title\") == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "149c1c70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotateString(s1: str, s2: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Logic: Create new string s1 + s2 so that we can search for all possible rotations simply by searching for substrings\n",
+    "    Deploy KMP to check for substring s2 inside our new string\n",
+    "    \"\"\"\n",
+    "    double_str = s1 + s1\n",
+    "    return s2 in double_str\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(100):\n",
+    "    length_ = 5\n",
+    "    s1 = random.choices(string.ascii_lowercase, k=length_)\n",
+    "    pivot = random.randint(0, length_ - 1)\n",
+    "    s2 = s1[pivot:] + s1[:pivot]\n",
+    "    result = True\n",
+    "    if random.random() > 0.5:\n",
+    "        s2[random.randint(0, length_ - 1)] = \"*\"\n",
+    "        result = False\n",
+    "    assert rotateString(\"\".join(s1), \"\".join(s2)) == result"
    ]
   }
  ],
