--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -2269,11 +2269,24 @@
    "source": [
     "def rotateString(s1: str, s2: str) -> bool:\n",
     "    \"\"\"\n",
-    "    Logic: Create new string s1 + s2 so that we can search for all possible rotations simply by searching for substrings\n",
-    "    Deploy KMP to check for substring s2 inside our new string\n",
+    "    Logic: Create new string s1 + s2 so that we can search for all\n",
+    "    possible rotations simply by searching for substrings\n",
     "    \"\"\"\n",
-    "    double_str = s1 + s1\n",
-    "    return s2 in double_str\n",
+    "    N = len(s1)\n",
+    "    if N != len(s2):\n",
+    "        return False\n",
+    "    else:\n",
+    "        double_str = s1 + s1\n",
+    "        for i in range(N):\n",
+    "            j, k = i, 0\n",
+    "            while j < 2 * N and k < N:\n",
+    "                if double_str[j] == s2[k]:\n",
+    "                    j, k = j + 1, k + 1\n",
+    "                else:\n",
+    "                    break\n",
+    "            if k == N:\n",
+    "                return True\n",
+    "        return False\n",
     "\n",
     "# Testing the solution\n",
     "for i in range(100):\n",
