LC practice - 16th Sept 2024

--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -526,6 +526,7 @@
      "iopub.status.idle": "2024-09-14T16:47:44.493749Z",
      "shell.execute_reply": "2024-09-14T16:47:44.493298Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008323,
      "end_time": "2024-09-14T16:47:44.494843",
@@ -549,6 +550,351 @@
     "assert leaders([1,2,5,3,1,2]) == [5,3,2]\n",
     "assert leaders([-3,4,5,1,-4,-5]) == [5,1,-4,-5]\n",
     "assert leaders([-3,4,5,1,-30,-10]) == [5,1,-10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc2207c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def spiralOrder(matrix: list[list[int]]) -> list[int]:\n",
+    "    i, j, M, N = 0, 0, len(matrix), len(matrix[0])\n",
+    "    result: list[int] = []\n",
+    "    for layer in range(math.ceil(min(M / 2, N / 2))):\n",
+    "        x, y = layer, layer\n",
+    "        result.append(matrix[x][y])\n",
+    "\n",
+    "        # Go right\n",
+    "        travelled_right = False\n",
+    "        while y + 1 < N - layer:\n",
+    "            y += 1\n",
+    "            result.append(matrix[x][y])\n",
+    "            travelled_right = True\n",
+    "\n",
+    "        # Go down\n",
+    "        travelled_down = False\n",
+    "        while x + 1 < M - layer:\n",
+    "            x += 1\n",
+    "            result.append(matrix[x][y])\n",
+    "            travelled_down = True\n",
+    "\n",
+    "        # Go left\n",
+    "        travelled_left = False\n",
+    "        while travelled_down and y - 1 >= layer:\n",
+    "            y -= 1\n",
+    "            result.append(matrix[x][y])\n",
+    "            travelled_left = True\n",
+    "\n",
+    "        # Go up\n",
+    "        travelled_up = False\n",
+    "        while travelled_left and x - 1 > layer:\n",
+    "            x -= 1\n",
+    "            result.append(matrix[x][y])\n",
+    "            travelled_up = True\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert spiralOrder([[1, 2, 3], [4 ,5 ,6], [7, 8, 9]]) == [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
+    "assert spiralOrder([[1, 2, 3, 4], [5, 6, 7, 8]]) == [1, 2, 3, 4, 8, 7, 6, 5]\n",
+    "assert spiralOrder([[1, 2], [3, 4], [5, 6], [7, 8]]) == [1, 2, 4, 6, 8, 7, 5, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1638de8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def rearrangeArray(nums: list[int]) -> list[int]:\n",
+    "    # Split and obtain the nums into two diff arrays\n",
+    "    pos: collections.deque[int] = collections.deque([])\n",
+    "    neg: collections.deque[int] = collections.deque([])\n",
+    "    for n in nums:\n",
+    "        if n < 0:\n",
+    "            neg.append(n)\n",
+    "        else:\n",
+    "            pos.append(n)\n",
+    "\n",
+    "    # Pos first, neg next preserving original order\n",
+    "    result: list[int] = []\n",
+    "    for i in range(len(nums) // 2):\n",
+    "        result.append(pos.popleft())\n",
+    "        result.append(neg.popleft())\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rearrangeArray([1,-1,-3,-4,2,3]) == [1,-1,2,-3,3,-4]\n",
+    "assert rearrangeArray([-4,4,-4,4,-4,4]) == [4,-4,4,-4,4,-4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72cfac21",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def pascalTriangle(numRows: int) -> list[list[int]]:\n",
+    "    result: list[list[int]] = [[1]]\n",
+    "    for i in range(1, numRows):\n",
+    "        result.append([1])\n",
+    "        for j in range(i - 1):\n",
+    "            result[-1].append(result[-2][j] + result[-2][j + 1])\n",
+    "        result[-1].append(1)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert pascalTriangle(5) == [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1590e1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def rotateMatrix(matrix: list[list[int]]) -> list[list[int]]:\n",
+    "    \"\"\"\n",
+    "    Similar to rotating an array by k places, this could be acheived\n",
+    "    by transposing the matrix first and then reversing the rows\n",
+    "    \"\"\"\n",
+    "    N = len(matrix)\n",
+    "\n",
+    "    # Transpose the matrix\n",
+    "    for i in range(N):\n",
+    "        for j in range(i + 1, N):\n",
+    "            matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]\n",
+    "\n",
+    "    # Reverse the rows\n",
+    "    for i in range(N):\n",
+    "        matrix[i].reverse()\n",
+    "\n",
+    "    return matrix\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rotateMatrix([[1,2,3], [4,5,6], [7,8,9]]) == [[7,4,1], [8,5,2], [9,6,3]]\n",
+    "assert rotateMatrix([[0,1,1,2], [2,0,3,1], [4,5,0,5], [5,6,7,0]]) == [[5,4,2,0], [6,5,0,1], [7,0,3,1], [0,5,1,2]]\n",
+    "assert rotateMatrix([[1,1,2], [5,3,1], [5,3,5]]) == [[5,5,1], [3,3,1], [5,1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e260a7c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def twoSum(nums: list[int], target: int) -> tuple[int, int]:\n",
+    "    N = len(nums)\n",
+    "    nums_: list[tuple[int, int]] = sorted(enumerate(nums), key=lambda x: x[1])\n",
+    "    i, j = 0, N - 1\n",
+    "    while i < j:\n",
+    "        curr = nums_[i][1] + nums_[j][1]\n",
+    "        pair = sorted([nums_[i][0], nums_[j][0]])\n",
+    "        if curr == target:\n",
+    "            return pair[0], pair[1]\n",
+    "        elif curr < target:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j -= 1\n",
+    "\n",
+    "    return -1, -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert twoSum([1,6,2,10,3], 7) == (0,1)\n",
+    "assert twoSum([1,3,5,-7,6,-3], 0) == (1,5)\n",
+    "assert twoSum([-6,7,1,-7,6,2], 3) == (2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70e0ad16",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def threeSum(nums: list[int]) -> set[tuple[int, int, int]]:\n",
+    "    N = len(nums)\n",
+    "    nums.sort()\n",
+    "    results: set[tuple[int, int, int]] = set()\n",
+    "    for i in range(N - 2):\n",
+    "        j, k = i + 1, N - 1\n",
+    "        while j < k:\n",
+    "            curr = nums[i] + nums[j] + nums[k]\n",
+    "            triplet = sorted([nums[i], nums[j], nums[k]])\n",
+    "            if curr == 0:\n",
+    "                results.add((triplet[0], triplet[1], triplet[2]))\n",
+    "                j, k = j + 1, k - 1\n",
+    "            elif curr > 0:\n",
+    "                k -= 1\n",
+    "            else:\n",
+    "                j += 1\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert threeSum([2, -2, 0, 3, -3, 5]) == {(-3, -2, 5), (-3, 0, 3), (-2, 0, 2)}\n",
+    "assert threeSum([2, -1, -1, 3, -1]) == {(-1, -1, 2)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2696f7e0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def fourSum(nums: list[int], target: int) -> set[tuple[int, int, int, int]]:\n",
+    "    \"\"\"\n",
+    "    Iterate all combinations of i, j\n",
+    "    For each such combination deploy the two pointer approach\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    nums.sort()\n",
+    "    results: set[tuple[int, int, int, int]] = set()\n",
+    "    for i in range(N - 3):\n",
+    "        for j in range(i + 1, N - 2):\n",
+    "            k, l = j + 1, N - 1\n",
+    "            while k < l:\n",
+    "                quad: list[int] = sorted([nums[i], nums[j], nums[k], nums[l]])\n",
+    "                total = nums[i] + nums[j] + nums[k] + nums[l]\n",
+    "                if total == target:\n",
+    "                    results.add((quad[0], quad[1], quad[2], quad[3]))\n",
+    "                    k, l = k + 1, l - 1\n",
+    "                elif total > target:\n",
+    "                    l -= 1\n",
+    "                else:\n",
+    "                    k += 1\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert fourSum([1,-2,3,5,7,9], 7) == {(-2,1,3,5)}\n",
+    "assert fourSum([7,-7,1,2,14,3], 9) == set()\n",
+    "assert fourSum([1,1,3,4,-3], 5) == {(-3,1,3,4)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e460ed7b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sortZeroOneTwo(nums: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Variation of Dutch National flag algorithm\n",
+    "    A much more intuitive algorithm is bucket sort\n",
+    "\n",
+    "    DNF:\n",
+    "    Assume nums from [0, low], [high, N-1] are sorted.\n",
+    "    Numbers between (low, high) are unsorted\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    low, mid, high = 0, 0, N - 1\n",
+    "    while mid <= high:\n",
+    "        # Correct position\n",
+    "        if nums[mid] == 1:\n",
+    "            mid += 1\n",
+    "\n",
+    "        # Incorrect\n",
+    "        elif nums[mid] == 0:\n",
+    "            nums[low], nums[mid] = nums[mid], nums[low]\n",
+    "            low, mid = low + 1, mid + 1\n",
+    "        else:\n",
+    "            nums[high], nums[mid] = nums[mid], nums[high]\n",
+    "            high -= 1\n",
+    "\n",
+    "    return nums\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortZeroOneTwo([0,0,1,2,0,1,2,2,1,0]) == [0,0,0,0,1,1,1,2,2,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e1e76e9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxSubArray(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Kadane's algorithm\n",
+    "    If at any pt total becomes less than 0, reset it\n",
+    "    \"\"\"\n",
+    "    max_, total = nums[0], 0\n",
+    "    for n in nums:\n",
+    "        total += n\n",
+    "        max_ = max(max_, total)\n",
+    "        if total < 0:\n",
+    "            total = 0\n",
+    "    return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxSubArray([2, 3, 5, -2, 7, -4]) == 15\n",
+    "assert maxSubArray([-2, -3, -7, -2, -10, -4]) == -2\n",
+    "assert maxSubArray([-1, 2, 3, -1, 2, -6, 5]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "028c7163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def majorityElement(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Logic: Assume a number is the majority element, everytime we encounter num in nums that equals\n",
+    "    our curr we increment count by 1 else decrement count by 1.\n",
+    "\n",
+    "    Continue doing until we have reached the end of the array\n",
+    "    \"\"\"\n",
+    "    result: int|None = None\n",
+    "    freq: int = 0\n",
+    "    for n in nums:\n",
+    "        if not result:\n",
+    "            result, freq = n, 1\n",
+    "        elif n == result:\n",
+    "            freq += 1\n",
+    "        else:\n",
+    "            freq -= 1\n",
+    "\n",
+    "        if freq == 0:\n",
+    "            result = None\n",
+    "\n",
+    "    return result if result else 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert majorityElement([7, 0, 0, 1, 7, 7, 2, 7, 7]) == 7\n",
+    "assert majorityElement([1, 1, 1, 2, 1, 2]) == 1\n",
+    "assert majorityElement([-1, -1, -1, -1]) == -1"
    ]
   }
  ],
