--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -999,6 +999,7 @@
      "iopub.status.idle": "2024-09-16T17:38:13.420499Z",
      "shell.execute_reply": "2024-09-16T17:38:13.419878Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010507,
      "end_time": "2024-09-16T17:38:13.421651",
@@ -1036,6 +1037,48 @@
     "assert majorityElement([7, 0, 0, 1, 7, 7, 2, 7, 7]) == 7\n",
     "assert majorityElement([1, 1, 1, 2, 1, 2]) == 1\n",
     "assert majorityElement([-1, -1, -1, -1]) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec51a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def majorityElementTwo(nums: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Same as prev question but we have two slots now.\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    n1, f1, n2, f2 = 0, 0, 0, 0\n",
+    "    for n in nums:\n",
+    "        if f1 == 0 and n != n2:\n",
+    "            n1, f1 = n, 1\n",
+    "        elif f2 == 0 and n != n1:\n",
+    "            n2, f2 = n, 1\n",
+    "        elif n == n1:\n",
+    "            f1 += 1\n",
+    "        elif n == n2:\n",
+    "            f2 += 1\n",
+    "        else:\n",
+    "            f1, f2 = f1 - 1, f2 - 1\n",
+    "\n",
+    "    # Double check to ensure that the majority\n",
+    "    # elements are occuring more than N // 3 times\n",
+    "    freq: dict[int, int] = dict()\n",
+    "    for n in nums:\n",
+    "        if n in (n1, n2):\n",
+    "            freq[n] = freq.get(n, 0) + 1\n",
+    "\n",
+    "    return [n for n in (n1, n2) if freq.get(n, 0) > N // 3]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert majorityElementTwo([1,1,1,1]) == [1]\n",
+    "assert majorityElementTwo([1,2,1,1,3,2,2]) == [1,2]\n",
+    "assert majorityElementTwo([1,2,1,1,3,2]) == [1]\n",
+    "assert majorityElementTwo([1,2,1,1,3,2,2,3]) == [1,2]\n",
+    "assert majorityElementTwo([1,1,2,2,3,3,4,4,5,5]) == []"
    ]
   }
  ],
