--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1050,6 +1050,7 @@
      "iopub.status.idle": "2024-09-17T17:29:33.685248Z",
      "shell.execute_reply": "2024-09-17T17:29:33.684701Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010893,
      "end_time": "2024-09-17T17:29:33.686049",
@@ -1094,6 +1095,54 @@
     "assert majorityElementTwo([1,2,1,1,3,2]) == [1]\n",
     "assert majorityElementTwo([1,2,1,1,3,2,2,3]) == [1,2]\n",
     "assert majorityElementTwo([1,1,2,2,3,3,4,4,5,5]) == []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2abcdcfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numberOfInversions(nums: list[int]) -> int:\n",
+    "    def modified_mergesort(low: int, high: int) -> int:\n",
+    "        if low >= high:\n",
+    "            return 0\n",
+    "\n",
+    "        else:\n",
+    "            # Merge sort left and right\n",
+    "            mid = (low + high) // 2\n",
+    "            cnt_left = modified_mergesort(low, mid)\n",
+    "            cnt_right = modified_mergesort(mid + 1, high)\n",
+    "\n",
+    "            # Create temp array for storing in order\n",
+    "            temp: list[int] = []\n",
+    "            cnt, i, j = 0, low, mid + 1\n",
+    "            while i <= mid or j <= high:\n",
+    "                if j > high or (i <= mid and nums[i] <= nums[j]):\n",
+    "                    temp.append(nums[i])\n",
+    "                    i += 1\n",
+    "                else:\n",
+    "                    temp.append(nums[j])\n",
+    "                    j += 1\n",
+    "\n",
+    "                    # We are inserting from the right portion\n",
+    "                    # Simply count how many elements we have\n",
+    "                    # left in the 'left' array\n",
+    "                    cnt += mid - i + 1\n",
+    "\n",
+    "            # Copy from temp back to array\n",
+    "            for i in range(low, high + 1):\n",
+    "                nums[i] = temp[i - low]\n",
+    "\n",
+    "            return cnt_left + cnt_right + cnt\n",
+    "\n",
+    "    inversions = modified_mergesort(0, len(nums) - 1)\n",
+    "    return inversions\n",
+    "\n",
+    "assert numberOfInversions([2, 3, 7, 1, 3, 5]) == 5\n",
+    "assert numberOfInversions([-10, -5, 6, 11, 15, 17]) == 0\n",
+    "assert numberOfInversions([9, 5, 4, 2]) == 6"
    ]
   }
  ],
