--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1108,6 +1108,7 @@
      "iopub.status.idle": "2024-09-18T16:52:49.415284Z",
      "shell.execute_reply": "2024-09-18T16:52:49.414855Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010699,
      "end_time": "2024-09-18T16:52:49.416070",
@@ -1158,6 +1159,49 @@
     "assert numberOfInversions([2, 3, 7, 1, 3, 5]) == 5\n",
     "assert numberOfInversions([-10, -5, 6, 11, 15, 17]) == 0\n",
     "assert numberOfInversions([9, 5, 4, 2]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c0a8830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reversePairs(nums: list[int]) -> int:\n",
+    "    N = len(nums)\n",
+    "    def modified_mergesort(left: int, right: int) -> int:\n",
+    "        if left >= right:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            mid = (left + right) // 2\n",
+    "            left_rev_count = modified_mergesort(left, mid)\n",
+    "            right_rev_count = modified_mergesort(mid + 1, right)\n",
+    "\n",
+    "            # Merge the two sorted portions together\n",
+    "            rev_count, i, j = 0, left, mid + 1\n",
+    "            temp: list[int] = []\n",
+    "            while i <= mid or j <= right:\n",
+    "                if j > right or (i <= mid and nums[i] <= nums[j]):\n",
+    "                    temp.append(nums[i])\n",
+    "                    i += 1\n",
+    "                else:\n",
+    "                    temp.append(nums[j])\n",
+    "                    rev_count += mid + 1 - bisect.bisect(nums, 2 * nums[j], left, mid + 1)\n",
+    "                    j += 1\n",
+    "\n",
+    "            # Join back into nums in correct order\n",
+    "            for i in range(left, right + 1):\n",
+    "                nums[i] = temp[i - left]\n",
+    "\n",
+    "            return left_rev_count + right_rev_count + rev_count\n",
+    "\n",
+    "    return modified_mergesort(0, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reversePairs([6, 4, 1, 2, 7]) == 3\n",
+    "assert reversePairs([5, 4, 4, 3, 3]) == 0\n",
+    "assert reversePairs([6, 4, 4, 2, 2]) == 2"
    ]
   }
  ],
