LC Practice - 21st Sept 2024

--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1172,6 +1172,7 @@
      "iopub.status.idle": "2024-09-20T02:20:37.752256Z",
      "shell.execute_reply": "2024-09-20T02:20:37.751812Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010833,
      "end_time": "2024-09-20T02:20:37.753115",
@@ -1217,6 +1218,72 @@
     "assert reversePairs([6, 4, 1, 2, 7]) == 3\n",
     "assert reversePairs([5, 4, 4, 3, 3]) == 0\n",
     "assert reversePairs([6, 4, 4, 2, 2]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "710b07ce",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxProduct(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    If no negatives or even number of negatives, ans is the product of all\n",
+    "    If odd negatives we need to pick either the suffix product or the prefix product\n",
+    "\n",
+    "    Iterate Left to right and then from right to left\n",
+    "    If n == 0, reset acc = 1\n",
+    "    Else acc *= n; max(result, acc)\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    result, acc = nums[0], 1\n",
+    "    for i in range(N):\n",
+    "        acc *= nums[i]\n",
+    "        result = max(acc, result)\n",
+    "        if acc == 0:\n",
+    "            acc = 1\n",
+    "\n",
+    "    acc = 1\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        acc *= nums[i]\n",
+    "        result = max(acc, result)\n",
+    "        if acc == 0:\n",
+    "            acc = 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxProduct([4, 5, 3, 7, 1, 2]) == 840\n",
+    "assert maxProduct([-5, 0, -2]) == 0\n",
+    "assert maxProduct([1, -2, 3, 4, -4, -3]) == 144"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013e8ce3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(nums1: list[int], M: int, nums2: list[int], N: int) -> None:\n",
+    "    # Shift nums1 to the right\n",
+    "    i, j = M - 1, M + N - 1\n",
+    "    while i >= 0:\n",
+    "        nums1[j] = nums1[i]\n",
+    "        i, j = i - 1, j - 1\n",
+    "\n",
+    "    # Do the usual merging that we do during merge sort\n",
+    "    i, j, head = N, 0, 0\n",
+    "    while i < M + N or j < N:\n",
+    "        if j >= N or (i < M + N and nums1[i] <= nums2[j]):\n",
+    "            nums1[head] = nums1[i]\n",
+    "            i, head = i + 1, head + 1\n",
+    "        else:\n",
+    "            nums1[head] = nums2[j]\n",
+    "            head, j = head + 1, j + 1"
    ]
   }
  ],
