--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1286,6 +1286,7 @@
      "iopub.status.idle": "2024-09-21T17:27:37.318376Z",
      "shell.execute_reply": "2024-09-21T17:27:37.317914Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009492,
      "end_time": "2024-09-21T17:27:37.319238",
@@ -1313,6 +1314,100 @@
     "        else:\n",
     "            nums1[head] = nums2[j]\n",
     "            head, j = head + 1, j + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f886398",
+   "metadata": {},
+   "source": [
+    "LC Practice - 22nd Sept 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fe84243",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestConsecutiveOpt1(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Insert n::nums into a set of intervals, merge them into DSU\n",
+    "    Return size of largest such element\n",
+    "    \"\"\"\n",
+    "    class DSU:\n",
+    "        def __init__(self) -> None:\n",
+    "            self.sizes: dict[int, int] = dict()\n",
+    "            self.parents: dict[int, int] = dict()\n",
+    "            self.nums: set[int] = set()\n",
+    "\n",
+    "        def union(self, n1: int, n2: int) -> None:\n",
+    "            ulp1, ulp2 = self.get_ultimate_parent(n1), self.get_ultimate_parent(n2)\n",
+    "            if ulp1 == ulp2:\n",
+    "                return\n",
+    "            elif self.sizes[ulp1] <= self.sizes[ulp2]:\n",
+    "                self.parents[ulp1] = ulp2\n",
+    "                self.sizes[ulp2] += self.sizes[ulp1]\n",
+    "            else:\n",
+    "                self.parents[ulp2] = ulp1\n",
+    "                self.sizes[ulp1] += self.sizes[ulp2]\n",
+    "\n",
+    "        def get_ultimate_parent(self, n: int) -> int:\n",
+    "            parent = self.parents[n]\n",
+    "            if parent == n:\n",
+    "                self.parents[n] = parent\n",
+    "                return parent\n",
+    "            else:\n",
+    "                up = self.get_ultimate_parent(parent)\n",
+    "                self.parents[n] = up\n",
+    "                return up\n",
+    "\n",
+    "    # DSU to store the prev and next num if they exist\n",
+    "    dsu: DSU = DSU()\n",
+    "    for n in nums:\n",
+    "        if n not in dsu.nums:\n",
+    "            dsu.nums.add(n)\n",
+    "            dsu.sizes[n] = 1\n",
+    "            dsu.parents[n] = n\n",
+    "        if n - 1 in dsu.sizes:\n",
+    "            dsu.union(n, n - 1)\n",
+    "        if n + 1 in dsu.sizes:\n",
+    "            dsu.union(n, n + 1)\n",
+    "\n",
+    "    return max(dsu.sizes.values())\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestConsecutiveOpt1([0, 3, 7, 2, 5, 8, 4, 6, 0, 1]) == 9\n",
+    "assert longestConsecutiveOpt1([100, 4, 200, 1, 3, 2]) == 4\n",
+    "assert longestConsecutiveOpt1([1, 9, 3, 10, 4, 20, 2]) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0971eed3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longestConsecutiveOpt2(nums: list[int]) -> int:\n",
+    "    nums_set: set[int] = set(nums)\n",
+    "    result, cnt = 0, 0\n",
+    "    for curr in range(int(1e5) + 1):\n",
+    "        if curr in nums:\n",
+    "            cnt += 1\n",
+    "            result = max(result, cnt)\n",
+    "        else:\n",
+    "            cnt = 0\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestConsecutiveOpt2([0, 3, 7, 2, 5, 8, 4, 6, 0, 1]) == 9\n",
+    "assert longestConsecutiveOpt2([100, 4, 200, 1, 3, 2]) == 4\n",
+    "assert longestConsecutiveOpt2([1, 9, 3, 10, 4, 20, 2]) == 4"
    ]
   }
  ],
